--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expose-loader": "^0.7.5",
     "laravel-mix": "^2.1.11",
     "laravel-mix-purgecss": "^2.0.0",
-    "tailwindcss": "^0.6.6"
+    "tailwindcss": "^0.6.6",
+    "tippy.js": "^3.1.1"
   }
 }
