--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
-  "private": true,
-  "scripts": {
-    "start": "npm run watch",
-    "dev": "npm run development",
-    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "prod": "npm run production",
-    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
-  },
-  "devDependencies": {
-    "cross-env": "^5.2.0",
-    "expose-loader": "^0.7.5",
-    "laravel-mix": "^2.1.11",
-    "laravel-mix-purgecss": "^2.0.0",
-    "micromodal": "^0.3.2",
-    "tailwindcss": "^0.6.6",
-    "tippy.js": "^3.1.1"
-  }
+    "private": true,
+    "scripts": {
+        "start": "npm run watch",
+        "dev": "npm run development",
+        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "prod": "npm run production",
+        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+    },
+    "devDependencies": {
+        "cross-env": "^5.2",
+        "laravel-mix": "^4.0.7",
+        "laravel-mix-purgecss": "^4.0.0",
+        "list.js": "^1.5.0",
+        "sass": "^1.16.0",
+        "sass-loader": "^7.1.0",
+        "tailwindcss": "^0.7.3",
+        "vue-template-compiler": "^2.5.22"
+    }
 }
